fix: Add white-space nowrap to tabs

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -100,6 +100,8 @@ img {
   cursor: pointer;
   box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
     rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+  /* Add white-space property to prevent text from wrapping */
+  white-space: nowrap;
 }
 
 .tabsContainer > button:hover {
